feat: add endpoint get, create, update user and user login
