# repository/interfaces.go
@@ -1,11 +1,17 @@
-// This file contains the interfaces for the repository layer.
-// The repository layer is responsible for interacting with the database.
-// For testing purpose we will generate mock implementations of these
-// interfaces using mockgen. See the Makefile for more information.
 package repository
 
-import "context"
+import (
+	"context"
+	"github.com/google/uuid"
+)
 
 type RepositoryInterface interface {
-	GetTestById(ctx context.Context, input GetTestByIdInput) (output GetTestByIdOutput, err error)
+	GetUserIdByPhoneNumber(ctx context.Context, phoneNumber string) (userId uuid.UUID, err error)
+	CreateUser(ctx context.Context, input CreateUserInput) error
+	GetUserWithPasswordByPhoneNumber(ctx context.Context, phoneNumber string) (output GetUserWithPasswordByPhoneNumberOutput, err error)
+	GetUserByUserId(ctx context.Context, userId uuid.UUID) (output GetUserByUserIdOutput, err error)
+	UpdateUserByUserId(ctx context.Context, input UpdateUserByUserIdInput) error
+
+	GetAccessTokenByToken(ctx context.Context, accessToken string) (output GetAccessTokenByTokenOutput, err error)
+	UserLogin(ctx context.Context, input UserLoginInput) error
 }
